// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StudioCardAuditPrompt golden > renders empty card text and material 1`] = `
{
  "system": "너는 소설 설정의 정합성 검사기다. 카드 한 장이 나머지 자료와 어긋나는지만 판정한다.
설명 없이 JSON 객체 하나만 출력하라.
{"warnings":[{"message":"무엇이 어떻게 어긋나는지 한 줄","source":"근거가 된 카드나 씬"}]}
어긋남이 없으면 {"warnings":[]}를 출력하라.

[판정 기준]
- 카드의 서술이 자료에 적힌 사실과 정면으로 어긋날 때만 warning을 내라.
- 자료에 없는 내용이 카드에 있는 것은 어긋남이 아니다.
- 문체나 분량 문제는 어긋남이 아니다.
- 추측이 아니라 자료에서 근거를 짚을 수 있을 때만 warning을 내라.",
  "user": "[검사 대상 카드] 준


[대조할 자료]
",
}
`;

exports[`StudioCardAuditPrompt golden > renders the card and the reference material 1`] = `
{
  "system": "너는 소설 설정의 정합성 검사기다. 카드 한 장이 나머지 자료와 어긋나는지만 판정한다.
설명 없이 JSON 객체 하나만 출력하라.
{"warnings":[{"message":"무엇이 어떻게 어긋나는지 한 줄","source":"근거가 된 카드나 씬"}]}
어긋남이 없으면 {"warnings":[]}를 출력하라.

[판정 기준]
- 카드의 서술이 자료에 적힌 사실과 정면으로 어긋날 때만 warning을 내라.
- 자료에 없는 내용이 카드에 있는 것은 어긋남이 아니다.
- 문체나 분량 문제는 어긋남이 아니다.
- 추측이 아니라 자료에서 근거를 짚을 수 있을 때만 warning을 내라.",
  "user": "[검사 대상 카드] 엘리아
id: elia
name: 엘리아
description: 항구의 의사

[대조할 자료]
[씬 03-harbor]
엘리아는 약사로 일한다.",
}
`;
